# yixuan-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
lib/config/: Cargo.toml  build.rs
lib/config/fbs/: avatar_base_template.fbs  avatar_battle_template.fbs  avatar_level_advance_template.fbs  avatar_level_template.fbs  avatar_passive_skill_template.fbs  avatar_skin_base_template.fbs  battle_event_config_template.fbs  battle_group_config_template.fbs  big_scene_map_area_template.fbs  boss_battle_difficulty_template.fbs  boss_battle_quest_template.fbs  calling_card_config_template.fbs  condition_config_template.fbs  double_elite_quest_template.fbs  equipment_level_template.fbs  equipment_suit_template.fbs  equipment_template.fbs  hollow_challenge_template.fbs  hollow_config_template.fbs  hollow_event_template.fbs  hollow_quest_template.fbs  item_template.fbs  main_city_object_template.fbs  main_city_quest_template.fbs  monster_card_difficulty_template.fbs  newbie_group_template.fbs  once_reward_template.fbs  player_skin_accessories_config_template.fbs  player_skin_config_template.fbs  post_girl_config_template.fbs  quest_config_template.fbs  section_config_template.fbs  special_quest_template.fbs  sub_area_data_template.fbs  teleport_config_template.fbs  traning_quest_template.fbs  unlock_config_template.fbs  urban_area_map_group_template.fbs  urban_area_map_template.fbs  weapon_level_template.fbs  (+3 more)
lib/config/gen_flatbuffers/: avatar_base_template_generated.rs  avatar_battle_template_generated.rs  avatar_level_advance_template_generated.rs  avatar_level_template_generated.rs  avatar_passive_skill_template_generated.rs  avatar_skin_base_template_generated.rs  battle_event_config_template_generated.rs  battle_group_config_template_generated.rs  big_scene_map_area_template_generated.rs  boss_battle_difficulty_template_generated.rs  boss_battle_quest_template_generated.rs  calling_card_config_template_generated.rs  condition_config_template_generated.rs  double_elite_quest_template_generated.rs  equipment_level_template_generated.rs  equipment_suit_template_generated.rs  equipment_template_generated.rs  hollow_challenge_template_generated.rs  hollow_config_template_generated.rs  hollow_event_template_generated.rs  hollow_quest_template_generated.rs  item_template_generated.rs  main_city_object_template_generated.rs  main_city_quest_template_generated.rs  monster_card_difficulty_template_generated.rs  newbie_group_template_generated.rs  once_reward_template_generated.rs  player_skin_accessories_config_template copy_generated.rs  player_skin_accessories_config_template_generated.rs  player_skin_config_template_generated.rs  post_girl_config_template_generated.rs  quest_config_template_generated.rs  section_config_template_generated.rs  special_quest_template_generated.rs  sub_area_data_template_generated.rs  teleport_config_template_generated.rs  traning_quest_template_generated.rs  unlock_config_template_generated.rs  urban_area_map_group_template_generated.rs  urban_area_map_template_generated.rs  (+4 more)
lib/config/src/: condition.rs  enums.rs  lib.rs  template_tb.rs
lib/config/src/level_process/: action.rs  chessboard.rs  mod.rs  predicate.rs
lib/config/src/util/: mod.rs  nap_expr_parser.rs
lib/config/src/world/: floor.rs  group.rs  mod.rs  object.rs
lib/logic/: Cargo.toml
lib/logic/src/: lib.rs  listener.rs  predicate_util.rs  scene.rs  system.rs
lib/logic/src/battle/: mod.rs
lib/logic/src/big_scene/: component.rs  event.rs  mod.rs  view_object.rs
lib/logic/src/debug/: gm_cmd.rs  mod.rs
lib/logic/src/dungeon/: avatar_unit.rs  enums.rs  mod.rs  property.rs
lib/logic/src/event/: action.rs  event_util.rs  mod.rs  uid.rs
lib/logic/src/fight/: mod.rs
lib/logic/src/hall/: action_executor.rs  mod.rs  npc.rs  predicate_executor.rs  time_period_util.rs
lib/logic/src/hollow/: action_executor.rs  chessboard.rs  entity.rs  entity_util.rs  expression_util.rs  mod.rs  net_helper.rs  predicate_executor.rs
lib/logic/src/hollow/component/: behavior.rs  category.rs  entity_priority.rs  grid.rs  grid_state.rs  hollow_event.rs  id.rs  (+3 more)
lib/logic/src/item/: avatar.rs  equip.rs  mod.rs  weapon.rs
lib/logic/src/long_fight/: mod.rs
lib/logic/src/math/: mod.rs  transform.rs
lib/proto-derive/: Cargo.toml
lib/proto-derive/src/: lib.rs
lib/proto-derive/src/field/: group.rs  map.rs  message.rs  mod.rs  oneof.rs  scalar.rs
servers/dbgate-server/: Cargo.toml  config.default.toml
servers/dbgate-server/migrations/: 001_init.sql
servers/dbgate-server/migrations/mysql/: 001_init.sql
servers/dbgate-server/migrations/postgres/: 001_init.sql
servers/dbgate-server/migrations/sqlite/: 001_init.sql
servers/dbgate-server/src/: config.rs  handlers.rs  main.rs  sdk.rs
servers/dbgate-server/src/database/: mod.rs  player_util.rs
servers/dispatch-server/: Cargo.toml  config.default.toml  resource_versions.default.toml  serverlist.default.toml
servers/dispatch-server/src/: config.rs  handlers.rs  main.rs  schema.rs
servers/game-server/: Cargo.toml  config.default.toml  first_login.default.toml  gacha_schedule.default.toml
servers/game-server/src/: cluster.rs  config.rs  handlers.rs  main.rs  player.rs  resources.rs  session.rs
servers/game-server/src/cluster/: logic_loop.rs  mod.rs
servers/game-server/src/handlers/: avatar.rs  big_scene.rs  buddy.rs  gacha.rs  item.rs  map.rs  misc.rs  mod.rs  month_reward.rs  photo_wall.rs  player.rs  quest.rs  ramen.rs  social.rs  training.rs  world.rs
servers/game-server/src/logic/: cluster.rs  mod.rs
servers/game-server/src/sync/: login_sync.rs  mod.rs  player_sync.rs
servers/game-server/src/util/: avatar_util.rs  basic_util.rs  big_scene_util.rs  gacha_util.rs  gm_util.rs  item_util.rs  map_util.rs  misc_util.rs  mod.rs  quest_util.rs  random.rs
servers/gate-server/: Cargo.toml  config.default.toml
servers/gate-server/src/: config.rs  encryption.rs  handlers.rs  main.rs  session.rs
servers/muip-server/: Cargo.toml  config.default.toml
servers/muip-server/res/: gm_form.html
servers/muip-server/src/: config.rs  http.rs  main.rs
(+709 files in other folders)
