[package]
name = "vivian-logic"
edition = "2024"
version.workspace = true

[dependencies]
tracing.workspace = true
serde.workspace = true
num_enum.workspace = true
paste.workspace = true
thiserror.workspace = true

vivian-proto.workspace = true
vivian-codegen.workspace = true
common.workspace = true
config.workspace = true
