[package]
name = "yixuan-logic"
edition = "2024"
version.workspace = true

[dependencies]
tracing.workspace = true
serde.workspace = true
num_enum.workspace = true
paste.workspace = true
thiserror.workspace = true

yixuan-proto.workspace = true
yixuan-codegen.workspace = true
common.workspace = true
config.workspace = true
