[package]
name = "proto-derive"
description = "Forked prost-derive but with sane maintainers (reversedrooms)"
version.workspace = true
edition = "2024"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.1"
itertools = ">=0.10.1, <=0.14"
proc-macro2 = "1.0.60"
quote = "1"
syn = { version = "2", features = ["extra-traits"] }
