[package]
name = "vivian-dispatch-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
axum.workspace = true

const_format.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json5.workspace = true

common.workspace = true
vivian-encryption.workspace = true
