[package]
name = "yixuan-game-server"
edition = "2024"
version.workspace = true

[dependencies]
tokio.workspace = true

const_format.workspace = true
serde.workspace = true
serde_json5.workspace = true
thiserror.workspace = true

rand.workspace = true
tracing.workspace = true
itertools.workspace = true
paste.workspace = true
scc.workspace = true

common.workspace = true
config.workspace = true
yixuan-logic.workspace = true
yixuan-models.workspace = true
yixuan-codegen.workspace = true
yixuan-proto.workspace = true
yixuan-service.workspace = true
