[package]
name = "yixuan-gate-server"
edition = "2024"
version.workspace = true

[dependencies]
tokio.workspace = true

const_format.workspace = true
serde.workspace = true
thiserror.workspace = true
paste.workspace = true

scc.workspace = true
rand.workspace = true
tracing.workspace = true

common.workspace = true
yixuan-proto.workspace = true
yixuan-encryption.workspace = true
yixuan-service.workspace = true
